tests/paczka1/fuzzy1/16164721.err
Error in line 2: iyA S459 28,9
Error in line 10: OXuW A525 56,8
Error in line 12: 9GFf S459 42,0
Error in line 26: S459 S467 305,1
Error in line 28: S459 A648 18,5
Error in line 34: 9GFf A525 26,8
Error in line 33: iyA A525 53,9
